# PDF-compressor

./: .gitignore  Dockerfile  README.md  app.py  build.bat  build.sh  desktop_app.py  desktop_app.spec  docker-compose.yml  pyproject.toml  reduce_size.py  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
pdf_compressor/: __init__.py
pdf_compressor/cli/: batch.py  main.py
pdf_compressor/core/: __init__.py  base.py  ghostscript.py  manager.py  pikepdf_engine.py  pypdf_engine.py
pdf_compressor/desktop/: __init__.py  app.py
pdf_compressor/utils/: __init__.py  file_utils.py  logging_config.py  validation.py
pdf_compressor/web/: app.py  routes.py
pdf_compressor/web/templates/: index.html
templates/: index.html
tests/: conftest.py  test_cli.py  test_engines.py  test_manager.py  test_validation.py  test_web.py
